# who-is-rat

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: factories.py  test_login.py
backoffice/: apps.py  forms.py  urls.py  views.py
backoffice/tests/: test_views.py
config/: context_processors.py  urls.py  versioning.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
docker/: entrypoint.sh  nginx.conf
reader/: apps.py  urls.py  views.py
reader/tests/: test_views.py
static/: site.css
templates/: base.html
templates/accounts/: login.html  password_change.html
templates/admin/: base_site.html  index.html  watermark_extract.html
templates/backoffice/: anti7ocr_diagnostics.html  anti_ocr_preset_form.html  anti_ocr_preset_list.html  base.html  chapter_form.html  dashboard.html  font_library.html  novel_form.html  novel_list.html  reader_form.html  reader_list.html  setup.html  watermark_extract.html
templates/reader/: chapter_detail.html  chapter_processing.html  library.html  novel_detail.html
